fixed New User Form spacing... should work on 100% view now

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,7 +6,7 @@
     margin: auto;
     margin-top: 10%;
     display: block; 
-    width: 25%; 
+    width: 37%; 
     background: rgba(40, 158, 197, 0.521); 
     padding: 14px 20px; 
     -webkit-border-radius: 4px; 
@@ -24,11 +24,11 @@
   }
   .center_username{
     margin-bottom: 3%;
-    padding-left: 30%;
+    padding-left: 29%;
   }
   .center_email{
     margin-bottom: 3%;
-    padding-left: 37%;
+    padding-left: 36%;
   }
   .center_password{
     margin-bottom: 3%;
@@ -36,7 +36,7 @@
   }
   .center_password_confirmation{
     margin-bottom: 3%;
-    padding-left: 7%;
+    padding-left: 10%;
   }
   .center_submit{
     margin-bottom: 3%;
